# md2notion

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  core.py  example.md  example_listbug.md  md2notion_setup.ipynb  pyproject.toml  reproduce_bug.py  setup.py  test_database_live.py
md2notion/: __init__.py  core.py
md2notionpage/: __init__.py  cli.py  core.py
scripts/: stress_test.py  test_module_import.py
tests/: test_list_parsing.py  test_md2notionpage.py  test_splitting_and_batching.py
